# HOAx

./: .gitignore  README.md  build.sh  meson.build  run.sh
.github/workflows/: meson-actions.yml
input/hoa_benchmarks/: README.md  diff-ACCs-min-odd-2.ehoa  toy_example_1.ehoa  toy_example_2.ehoa
scripts/: compile.sh  hello.sh  parser_test.sh  run.sh
src/: hoax.cpp  hoax.h  main.cpp  utils.cpp  utils.h
src/hoax/: hoax.cpp  hoax.h  meson.build  utils.cpp  utils.h
src/spot/: parser_test.cpp
tests/: meson.build  test_bdd_utils.cpp  test_set_utils.cpp  test_spot_bdd_api.cpp  test_spot_linkage.cpp  test_spot_parser_api.cpp  test_utils.cpp
